# perch

./: Cargo.toml
src/: app.rs  main.rs
src/models/: config.rs  metrics.rs  mod.rs
src/services/: config_manager.rs  format.rs  mod.rs  system_monitor.rs
src/ui/: components.rs  mod.rs  theme.rs  widget.rs
